<resources>
    <string name="app_name">Popular Movies</string>
    <string name="title_activity_detail">DetailActivity</string>
    <string name="title_placeholder_text">Title</string>
    <string name="rating_placeholder">Rating Placeholder</string>
    <string name="release_year_placeholder">Release Year</string>
    <string name="synopsis_placeholder">Synopsys</string>
    <string name="settings_menu">Settings</string>
    <string name="title_movie_details">Movie Details</string>
    <string name="add_to_favourites">Favourite</string>
    <string name="remove_from_favourites">Not Favourite</string>
    <string name="pref_sort_label_rating">Rating</string>
    <string name="pref_sort_label_popularity">Popularity</string>
    <string name="pref_sort_label_favourites">Favourites</string>
    <string name="pref_sort_val_rating" translatable="false">Rating</string>
    <string name="pref_sort_val_popularity" translatable="false">Popularity</string>
    <string name="pref_sort_val_favourites" translatable="false">Favourites</string>
    <string name="perf_sort_label" translatable="false">Sort order</string>
    <string name="pref_sort_key" translatable="false">sort_key</string>
    <string name="view_trailer">Trailer</string>
    <string name="view_review">Reviews</string>
    <string name="release_date">Release Date</string>
    <string name="rating">Rating</string>
    <string name="synopsis">Synopsis</string>
    <string name="no_trailers_available">No trailer available so far</string>
    <string name="no_reviews_available">No reviews available so far</string>
    <string name="no_movie_yet">Please click on movie icon on left panel to discover more...</string>
</resources>
