<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_movie_detail"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="org.mefistofele.hikari.popularmovies.MovieDetailActivity"
    android:weightSum="1">
    <TextView
        style="@style/Title"
        android:id="@+id/text_view_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:text="@string/title_placeholder_text" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1">
            <TextView
                android:id="@+id/text_view_release_date"
                tools:text="@string/release_year_placeholder"
                android:layout_height="match_parent"
                android:layout_width="match_parent"/>
            <TextView
                android:id="@+id/text_view_rating"
                tools:text="@string/rating_placeholder"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"/>
            <TextView
                style="@style/FavouriteButton"
                android:id="@+id/toggle_favourites"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/add_to_favourites"/>

        </LinearLayout>
        <ImageView
            android:id="@+id/image_view_poster"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"/>
    </LinearLayout>
    <TextView
        android:id="@+id/text_view_sysnopsis"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:text="@string/synopsis_placeholder" />

</LinearLayout>
